<resources>
    <string name="app_name">Nursery Polije</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Profile</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <!--    <string name="signup_login_hint">Already have an account? Sign In</string>-->
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="title_activity_beranda">BerandaActivity</string>


    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="masukkan_password_lama">Password Lama</string>
    <string name="masukkan_password_baru">Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>


    <string name="regis_nama_hint">Nama Lengkap</string>
    <string name="regis_notel_hint">No. HP</string>
    <string name="regis_email_hint">Email</string>
    <string name="regis_password1_hint">Password</string>
    <string name="regis_password2_hint">Konfirmasi Password</string>

    <!--<<<<<<< HEAD-->
    <!--    <string name="title_activity_started">StartedActivity</string>-->
    <!--    <string name="dummy_button">Dummy Button</string>-->
    <!--    <string name="dummy_content">DUMMY\nCONTENT</string>-->
    <!--=======-->
    <string name="username">username</string>


    <string name="regis_alamat_hint">Alamat</string>
    <string name="regis_jk_hint">Jenis Kelamin</string>
    <string name="password_baru1">Password Baru</string>
    <string name="password_lama1">Password Lama</string>
    <string name="konfirmasi_password1">Konfirmasi Password</string>
    <string name="title_activity_peta_lokasi">Map</string>

    <string-array name="settingprofile">
        <item>Ubah Profile</item>
        <item>Ubah Password</item>
    </string-array>
    <string-array name="jenisKelamin">
        <item>Jenis Kelamin</item>
        <item>L</item>
        <item>P</item>
    </string-array>
</resources>
