<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">
    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <EditText
            android:id="@+id/regis_nama"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/regis_nama_hint"
            android:maxLines="1" />
        <EditText
            android:id="@+id/regis_alamat"
            style="@style/modifiedEditText"
            android:hint="@string/regis_alamat_hint"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/regis_email"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/regis_email_hint"/>

        <EditText
            android:id="@+id/regis_password"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/regis_password1_hint"/>

        <EditText
            android:id="@+id/regis_konfir_password"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/regis_password2_hint"/>


        <TextView
            android:id="@+id/pesan"
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/btnlogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Daftar" />

        <TextView
            style="@style/parent"
            android:id="@+id/daftar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="Sudah punya akun ? Login disini"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
