<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">
    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/lupa_password"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <EditText
            android:id="@+id/email"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:inputType="text"
            android:maxLines="1" />
        <EditText
            android:id="@+id/passlm"
            style="@style/modifiedEditText"
            android:hint="@string/masukkan_password_baru"
            android:maxLines="1"
            android:inputType="text"/>
        <EditText
            android:id="@+id/konfpass"
            style="@style/modifiedEditText"
            android:hint="@string/konfirmasi_password"
            android:maxLines="1"
            android:inputType="text"/>
        <TextView
            style="@style/viewParent"
            android:id="@+id/pesan"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <Button
            android:id="@+id/btnlogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            style="@style/parent"
            android:id="@+id/daftar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="Belum Punya Akun? Daftar disini"
            android:layout_marginTop="@dimen/loginViewsMargin"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
