<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">
    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">
        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/login"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/cl_bold"/>

        <EditText
            android:id="@+id/etemail"
            style="@style/modifiedEditText"
            android:layout_height="wrap_content"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:fontFamily="@font/cl_bold"/>
        <EditText
            android:id="@+id/etpassword"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:maxLines="1"
            android:inputType="textPassword"
            android:fontFamily="@font/cl_bold"/>
        <TextView
            android:id="@+id/lupa"
            style="@style/viewParent"
            android:text="Lupa Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/cl_bold"/>

        <TextView
            android:id="@+id/pesan"
            style="@style/viewParent"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/newsMoreTextSize"
            android:fontFamily="@font/bertina"/>
        <Button
            android:id="@+id/btnlogin"
            style="@style/loginButton"
            android:background="@drawable/custombutton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/bebas"/>
        <TextView
            style="@style/parent"
            android:id="@+id/daftar"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="Belum Punya Akun? Daftar disini"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="@font/cl_bold"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
